; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_record_push_status_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_record_push_status_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_8__*, i32, %struct.TYPE_8__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @record_push_status_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @record_push_status_cb(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %10, %struct.TYPE_7__** %7, align 8
  %11 = call %struct.TYPE_8__* @git__calloc(i32 1, i32 24)
  store %struct.TYPE_8__* %11, %struct.TYPE_8__** %8, align 8
  %12 = call i32 @cl_assert(%struct.TYPE_8__* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load i8*, i8** %4, align 8
  %17 = call %struct.TYPE_8__* @git__strdup(i8* %16)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 2
  store %struct.TYPE_8__* %17, %struct.TYPE_8__** %19, align 8
  %20 = call i32 @cl_assert(%struct.TYPE_8__* %17)
  br label %21

21:                                               ; preds = %15, %3
  %22 = load i8*, i8** %5, align 8
  %23 = icmp eq i8* %22, null
  %24 = zext i1 %23 to i32
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %35

29:                                               ; preds = %21
  %30 = load i8*, i8** %5, align 8
  %31 = call %struct.TYPE_8__* @git__strdup(i8* %30)
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  store %struct.TYPE_8__* %31, %struct.TYPE_8__** %33, align 8
  %34 = call i32 @cl_assert(%struct.TYPE_8__* %31)
  br label %35

35:                                               ; preds = %29, %21
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %39 = call i32 @git_vector_insert(i32* %37, %struct.TYPE_8__* %38)
  ret i32 0
}

declare dso_local i32 @cl_assert(%struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_8__* @git__calloc(i32, i32) #1

declare dso_local %struct.TYPE_8__* @git__strdup(i8*) #1

declare dso_local i32 @git_vector_insert(i32*, %struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
